--- a/SoundRecord/app/src/main/res/layout/content_form_pdf.xml
+++ b/SoundRecord/app/src/main/res/layout/content_form_pdf.xml
@@ -9,6 +9,15 @@
     tools:context=".FormPDFActivity"
     tools:showIn="@layout/activity_form_pdf">
 
+    <ScrollView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context=".FormPDFActivity"
+        tools:showIn="@layout/activity_form_pdf">
+
     <android.support.design.widget.TextInputLayout
         android:id="@+id/textInput"
         android:layout_width="match_parent"
@@ -344,6 +353,6 @@
             app:layout_constraintStart_toStartOf="parent" />
 
     </android.support.design.widget.TextInputLayout>
-
+    </ScrollView>
 
 </android.support.v4.widget.NestedScrollView>
