--- a/SoundRecord/app/src/main/res/layout/activity_maps.xml
+++ b/SoundRecord/app/src/main/res/layout/activity_maps.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#abcdef"
@@ -10,12 +9,13 @@
     tools:context=".MapsActivity">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="475dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toTopOf="parent"
         tools:context=".MapsActivity">
 
     </fragment>
@@ -28,9 +28,9 @@
         android:layout_marginBottom="8dp"
         android:background="@android:color/holo_blue_light"
         android:baselineAligned="false"
-        android:text="BEGIN"
+        android:text="@string/begin"
         android:textColor="@android:color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
