--- a/SoundRecord/app/src/main/res/layout/activity_recording.xml
+++ b/SoundRecord/app/src/main/res/layout/activity_recording.xml
@@ -39,9 +39,9 @@
         android:layout_marginBottom="8dp"
         android:background="@android:color/holo_blue_light"
         android:baselineAligned="false"
-        android:text="reconnect"
+        android:text="@string/reconnect"
         android:textColor="@android:color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
