--- a/SoundRecord/app/src/main/res/layout/content_final.xml
+++ b/SoundRecord/app/src/main/res/layout/content_final.xml
@@ -33,7 +33,6 @@
             android:visibility="visible">
 
             <TextView
-                android:id="@+id/textView1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -42,7 +41,6 @@
                 android:textSize="10sp" />
 
             <TextView
-                android:id="@+id/textView2"
                 android:layout_width="44dp"
                 android:layout_height="wrap_content"
                 android:text="@string/loc1"
@@ -52,7 +50,6 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView3"
                 android:layout_width="44dp"
                 android:layout_height="wrap_content"
                 android:text="@string/loc2"
@@ -62,7 +59,6 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView4"
                 android:layout_width="44dp"
                 android:layout_height="wrap_content"
                 android:text="@string/loc3"
@@ -72,7 +68,6 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView5"
                 android:layout_width="44dp"
                 android:layout_height="match_parent"
                 android:text="@string/loc4"
@@ -82,7 +77,6 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView6"
                 android:layout_width="44dp"
                 android:layout_height="match_parent"
                 android:text="@string/loc5"
@@ -92,7 +86,6 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView7"
                 android:layout_width="44dp"
                 android:layout_height="wrap_content"
                 android:text="@string/loc6"
@@ -102,7 +95,6 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView8"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -115,7 +107,6 @@
         <TableRow android:layout_width="wrap_content">
 
             <TextView
-                android:id="@+id/textView9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -127,7 +118,7 @@
                 android:id="@+id/textView10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -136,7 +127,7 @@
                 android:id="@+id/textView11"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -145,7 +136,7 @@
                 android:id="@+id/textView12"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -154,7 +145,7 @@
                 android:id="@+id/textView13"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -163,16 +154,15 @@
                 android:id="@+id/textView14"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/textView15"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -191,7 +181,6 @@
         <TableRow android:layout_width="wrap_content">
 
             <TextView
-                android:id="@+id/textView17"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -203,7 +192,7 @@
                 android:id="@+id/textView18"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -212,7 +201,7 @@
                 android:id="@+id/textView19"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -221,7 +210,7 @@
                 android:id="@+id/textView20"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -230,7 +219,7 @@
                 android:id="@+id/textView21"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -239,7 +228,7 @@
                 android:id="@+id/textView22"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -248,13 +237,12 @@
                 android:id="@+id/textView23"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/textView24"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -267,7 +255,6 @@
         <TableRow android:layout_width="wrap_content">
 
             <TextView
-                android:id="@+id/textView25"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -279,7 +266,7 @@
                 android:id="@+id/textView26"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -288,7 +275,7 @@
                 android:id="@+id/textView27"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -297,7 +284,7 @@
                 android:id="@+id/textView28"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -306,7 +293,7 @@
                 android:id="@+id/textView29"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -315,7 +302,7 @@
                 android:id="@+id/textView30"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -324,13 +311,12 @@
                 android:id="@+id/textView31"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/textView32"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -343,7 +329,6 @@
         <TableRow android:layout_width="wrap_content">
 
             <TextView
-                android:id="@+id/textView33"
                 android:layout_width="49dp"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -355,7 +340,7 @@
                 android:id="@+id/textView34"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -364,7 +349,7 @@
                 android:id="@+id/textView35"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -373,7 +358,7 @@
                 android:id="@+id/textView36"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -382,7 +367,7 @@
                 android:id="@+id/textView37"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -391,7 +376,7 @@
                 android:id="@+id/textView38"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -400,13 +385,12 @@
                 android:id="@+id/textView39"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/textView40"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -421,7 +405,6 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView41"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center"
@@ -432,7 +415,7 @@
                 android:id="@+id/textView42"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -441,7 +424,7 @@
                 android:id="@+id/textView43"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -450,7 +433,7 @@
                 android:id="@+id/textView44"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -459,7 +442,7 @@
                 android:id="@+id/textView45"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -468,7 +451,7 @@
                 android:id="@+id/textView46"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
@@ -477,13 +460,12 @@
                 android:id="@+id/textView47"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/textView48"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
@@ -500,7 +482,6 @@
             android:visibility="visible">
 
             <TextView
-                android:id="@+id/textView49"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/avg"
@@ -513,7 +494,7 @@
                 android:id="@+id/textView50"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp"
@@ -523,7 +504,7 @@
                 android:id="@+id/textView51"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp"
@@ -533,7 +514,7 @@
                 android:id="@+id/textView52"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp"
@@ -543,7 +524,7 @@
                 android:id="@+id/textView53"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp"
@@ -553,7 +534,7 @@
                 android:id="@+id/textView54"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp"
@@ -563,7 +544,7 @@
                 android:id="@+id/textView55"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp"
@@ -574,7 +555,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/holo_red_light"
-                android:text="-"
+                android:text="@string/dash"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="12sp"
