--- a/SoundRecord/app/src/main/res/layout/content_results.xml
+++ b/SoundRecord/app/src/main/res/layout/content_results.xml
@@ -30,7 +30,6 @@
             android:background="@android:color/holo_blue_bright">
 
             <TextView
-                android:id="@+id/dropNo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/drop_no"
@@ -40,7 +39,6 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/drop1"
                 android:layout_width="43dp"
                 android:layout_height="wrap_content"
                 android:text="@string/drop1"
@@ -50,7 +48,6 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/drop2"
                 android:layout_width="43dp"
                 android:layout_height="wrap_content"
                 android:text="@string/drop2"
@@ -60,7 +57,6 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/drop3"
                 android:layout_width="43dp"
                 android:layout_height="wrap_content"
                 android:text="@string/drop3"
@@ -70,7 +66,6 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/drop4"
                 android:layout_width="43dp"
                 android:layout_height="wrap_content"
                 android:text="@string/drop4"
@@ -80,7 +75,6 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/drop5"
                 android:layout_width="43dp"
                 android:layout_height="wrap_content"
                 android:text="@string/drop5"
@@ -90,7 +84,6 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/avg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/avg"
@@ -106,7 +99,6 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/rebound_H"
                 android:layout_width="85dp"
                 android:layout_height="wrap_content"
                 android:background="@android:color/holo_blue_bright"
@@ -284,7 +276,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         android:background="@android:color/holo_blue_light"
-        android:text="Button"
+        android:text="@string/button"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
