--- a/SoundRecord/app/src/main/res/values/styles.xml
+++ b/SoundRecord/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="TextAppearance.AppCompat.Widget.ActionBar.Title" parent="@android:style/TextAppearance">
-        <item name="android:textSize">30dp</item>
+        <item name="android:textSize">30sp</item>
         <item name="android:textColor">@color/title_color</item>
         <item name="android:fontFamily">monospace</item>
     </style>
