Added warning for if fields are left empty in formPDF

--- a/SoundRecord/app/src/main/res/layout/content_form_pdf.xml
+++ b/SoundRecord/app/src/main/res/layout/content_form_pdf.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -233,7 +234,7 @@
             android:layout_weight="1"
             android:text="Select the version:"
             android:textColor="@color/colorAccent"
-            android:textSize="18dp"/>
+            android:textSize="18dp" />
 
         <RadioGroup
             android:id="@+id/fifaRadioGroup"
@@ -246,6 +247,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:checked="false"
                 android:onClick="onFifaRadioButtonClicked"
                 android:text="FIFA Quality 0.6 - 1.0m" />
 
@@ -254,6 +256,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:checked="false"
                 android:onClick="onFifaRadioButtonClicked"
                 android:text="FIFA Quality Pro 0.6 - 0.85m" />
         </RadioGroup>
@@ -267,54 +270,56 @@
             android:textColor="@color/colorAccent"
             android:textSize="18sp" />
 
-    <RadioGroup
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
 
-        <RadioButton
-            android:id="@+id/uk1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="onEquipmentRadioButtonClicked"
-            android:text="UK 1" />
+            <RadioButton
+                android:id="@+id/uk1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:checked="false"
+                android:onClick="onEquipmentRadioButtonClicked"
+                android:text="UK 1" />
 
-        <RadioButton
-            android:id="@+id/uk2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="onEquipmentRadioButtonClicked"
-            android:text="UK 2" />
+            <RadioButton
+                android:id="@+id/uk2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="onEquipmentRadioButtonClicked"
+                android:text="UK 2" />
 
-        <RadioButton
-            android:id="@+id/flight3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="onEquipmentRadioButtonClicked"
-            android:text="Flight 3" />
+            <RadioButton
+                android:id="@+id/flight3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:checked="false"
+                android:onClick="onEquipmentRadioButtonClicked"
+                android:text="Flight 3" />
 
-        <RadioButton
-            android:id="@+id/flight4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="onEquipmentRadioButtonClicked"
-            android:text="Flight 4" />
+            <RadioButton
+                android:id="@+id/flight4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="onEquipmentRadioButtonClicked"
+                android:text="Flight 4" />
 
-        <RadioButton
-            android:id="@+id/flight5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="onEquipmentRadioButtonClicked"
-            android:text="Flight 5" />
+            <RadioButton
+                android:id="@+id/flight5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="onEquipmentRadioButtonClicked"
+                android:text="Flight 5" />
 
 
-    </RadioGroup>
+        </RadioGroup>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/other"
