--- a/SoundRecord/app/src/main/res/layout/content_final.xml
+++ b/SoundRecord/app/src/main/res/layout/content_final.xml
@@ -160,6 +160,7 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/textView15"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/dash"
